Collection page - breadcrumbs and 1st line overlapping Fix the CSS for the breadcrumbs so that it doesn't bring the main content up 15px anymore; Also quickly add "marketing" email address to contact page and fix up code format a bit; This fixes #11.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,9 @@ table
 }
 .tblBreadcrumbs
 {
-	margin-top:		  -15px;
-	margin-bottom:	-15px;
-	margin-left:	  0px;
+	margin-top: -15px;
+	margin-bottom: 0px;
+	margin-left: 0px;
 }
 .tblFooter
 {
