--- a/css/styles_ie.css
+++ b/css/styles_ie.css
@@ -5,7 +5,5 @@
 }
 .tblBreadcrumbs
 {
-	margin-top:		  0px;
-	margin-bottom:	-15px;
-	margin-left:	  0px;
+	margin-top: 0px;
 }
