--- a/sandbox/css/styles.css
+++ b/sandbox/css/styles.css
@@ -38,9 +38,9 @@ table
 }
 .tblBreadcrumbs
 {
-	margin-top:		  -15px;
-	margin-bottom:	-15px;
-	margin-left:	  0px;
+	margin-top: -15px;
+	margin-bottom: 0px;
+	margin-left: 0px;
 }
 .tblFooter
 {
@@ -310,6 +310,24 @@ a.aDark
 a.aLight
 {
 	color:#F1C9E1;
+}
+
+/* mailto and pdf hyperlinks - add icons */
+a[href ^="mailto:"] {
+   padding-right: 20px;
+   background: transparent url(/images/link_mail.gif) no-repeat center right;
+}
+a[href $='.pdf'] { 
+   padding-right: 18px;
+   background: transparent url(/images/link_pdf.gif) no-repeat center right;
+}
+a[class ~="external"] {
+   padding-right: 18px;
+   background: transparent url(/images/link_ext.gif) no-repeat center right;
+}
+a[class ~="popup"] {
+   padding-right: 18px;
+   background: transparent url(/images/link_popup.gif) no-repeat center right;
 }
 
 /* tooltips */
